--- a/lake_styles.css
+++ b/lake_styles.css
@@ -20,6 +20,77 @@
 }
 
 @font-face {
+    font-family: DobkinPlain;
     src: url('DobkinPlain.woff') format('woff'),
         url('DobkinPlain.ttf') format('truetype');
 }
+
+html{
+    background-color: rgb(180, 169, 13);
+}
+
+
+aside h1{
+font-size: 1.3em;
+}
+header>nav{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: rgb(223, 130, 223);
+}
+header>nav a:link,
+header>nav a:visited {
+    color: rgb(50, 30, 50);
+    text-decoration: none;
+}
+header>nav a:active,
+header>nav a:hover{
+    background-color: hsla(184, 89%, 45%, 0.3);
+}
+/* Sectioning Element */
+section h1{
+    font-size: 3em;
+    font-family: champagne, cursive;
+margin: 5px;
+text-align: center;
+}
+
+section#leftcol{
+    background-color: rgb(108, 96, 150);
+}
+section#leftcol aside h1{
+    font-size: 2em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+/* section#leftcol p:first-of-type::first-letter{
+    font-size:1.5em;
+    font-family: 'New Times Roman', cursive;
+} */
+
+/* Sectioning ID rightcol */
+section#rightcol{
+    background-color: rgb(216, 95, 216);
+    font-size: 1.2em;
+    margin-bottom: 30px;
+}
+section#rightcol h2{
+    font-family: DobkinPlain;
+    font-size: 2em;
+    text-align: center;
+}
+section#rightcol>nav a:link,
+section#rightcol>nav a:visited{
+    color: rgb(60, 30, 80);
+    text-decoration: none;
+}
+section#rightcol>nav a:active,
+section#rightcol>nav a:hover{
+    color:rgb(150, 20, 30);
+}
+/* Footer */
+footer{
+    background-color: maroon;
+    color: red;
+    text-align: center;
+}
+/* Blockquotes */
